# lukass_python_utils

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ci-image.Dockerfile  mkdocs.yml  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
docs/: index.md
src/lukass_python_utils/: __init__.py  shell_utils.py  utilities.py
tests/integration/: test_my_int_test.py
tests/unit/: test_my_unit_test.py  utilities_test.py
